--- a/AnvilTool/ResourceDictionary/CommonStyles.xaml
+++ b/AnvilTool/ResourceDictionary/CommonStyles.xaml
@@ -33,15 +33,17 @@
     <sys:Double x:Key="barHeight">20</sys:Double>
     <sys:Double x:Key="barWidth">400</sys:Double>
     <sys:Double x:Key="sliderHeight">16</sys:Double>
+    <sys:Double x:Key="treeIconDim">12</sys:Double>
+    <sys:Double x:Key="treeLblFontSize">16</sys:Double>
     <!--#endregion-->
 
     <Style TargetType="{x:Type Window}">
-        <Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>
+        <!--<Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>-->
         <Setter Property="Background" Value="{StaticResource BgColorBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource TextColorBrush}"/>
     </Style>
 
     <Style TargetType="ToolTip">
-        <Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>
+        <!--<Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>-->
     </Style>
 </ResourceDictionary>
