--- a/AnvilTool/Views/RecipesPopup.xaml
+++ b/AnvilTool/Views/RecipesPopup.xaml
@@ -4,120 +4,137 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnvilTool.Views"
+        xmlns:properties="clr-namespace:AnvilTool.Properties"
         mc:Ignorable="d"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:Helpers="clr-namespace:AnvilTool.Helpers"
         xmlns:Entities="clr-namespace:AnvilTool.Entities"
         xmlns:StoredData="clr-namespace:AnvilTool.Entities.StoredData" xmlns:usercontrols="clr-namespace:AnvilTool.UserControls"
         Title="RecipesPopup" Height="450" Width="600">
-    <Grid>
-        <Grid.Resources>
-            <Style TargetType="{x:Type Button}">
-                <Setter Property="MinWidth" Value="100"/>
-                <Setter Property="Margin" Value="6 2"/>
-                <Setter Property="Padding" Value="2 0"/>
-            </Style>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/AnvilTool;component/ResourceDictionary/CommonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
 
-            <Style TargetType="TextBlock">
-                <!--<Setter Property="Width" Value="100"/>-->
-            </Style>
 
-            <Style TargetType="TextBox">
-                <Setter Property="MinWidth" Value="150"/>
-            </Style>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Border>
+        <Border.Background>
+            <ImageBrush ImageSource="{StaticResource inventoryDrawingImage}" Stretch="Fill"/>
+        </Border.Background>    
+    
+        <Grid Margin="20">
+            <Grid.Resources>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="MinWidth" Value="100"/>
+                    <Setter Property="Margin" Value="6 2"/>
+                    <Setter Property="Padding" Value="2 0"/>
+                </Style>
 
-        <StackPanel Grid.Row="0">
-            <StackPanel Orientation="Horizontal"
-                        Visibility="{Binding SelectButtonVisibility}">
-                <Button Content="Select"
-                        Command="{Binding SelectCmd}"/>
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal">
-                <Button Content="Delete Server"
-                        Command="{Binding DeleteServerCmd}"/>
-                <Button Content="Delete Material"
-                        Command="{Binding DeleteMaterialCmd}"/>
-                <Button Content="Delete Product"
-                        Command="{Binding DeleteProductCmd}"/>
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal"
-                        Visibility="{Binding SaveButtonVisibility}">
-                <Button Content="Add Server"
-                        Command="{Binding AddServerCmd}"/>
-                <Button Content="Add Material"
-                        Command="{Binding AddMaterialCmd}"/>
-                <Button Content="Add Product"
-                        Command="{Binding AddProductCmd}"/>
-            </StackPanel>
+                <Style TargetType="TextBlock" x:Key="popupLabel">
+                    <Setter Property="Width" Value="100"/>
+                </Style>
 
-            <StackPanel Visibility="{Binding SaveButtonVisibility}">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Server"/>
-                    <TextBox Text="{Binding NewServerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <Style TargetType="TextBox">
+                    <Setter Property="MinWidth" Value="150"/>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0">
+                <StackPanel Orientation="Horizontal"
+                            Visibility="{Binding SelectButtonVisibility}">
+                    <Button Content="Select"
+                            Command="{Binding SelectCmd}"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Material"/>
-                    <TextBox Text="{Binding NewMaterialName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Product"/>
-                    <TextBox Text="{Binding NewProductName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                </StackPanel>
-            </StackPanel>
             
-        </StackPanel>
-        
-        <TreeView ItemsSource="{Binding Servers}" 
-                  x:Name="treeView"
-                  Grid.Row="1">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectedItemChanged">
-                    <i:InvokeCommandAction Command="{Binding SelectedItemCommand}"
-                                       CommandParameter="{Binding SelectedItem, ElementName=treeView}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-            <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type StoredData:Server}" ItemsSource="{Binding Materials}">
-                    <!--<StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
-                    </StackPanel>-->
-                    <usercontrols:ServerTreeCtrl Server="{Binding .}"/>
-                </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type StoredData:Material}" ItemsSource="{Binding Products}">
-                    <!--<StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}"/>
-                    </StackPanel>-->
-                    <usercontrols:MaterialTreeCtrl Material="{Binding .}"/>
-                </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type StoredData:Product}" >
-                    <!--<StackPanel Orientation="Horizontal">
-                        <TextBlock>
-                            <Run Text="{Binding Name}"/>
-                            <Run Text="  -  Target: "/>
-                            <Run Text="{Binding Target}"/>
-                        </TextBlock>
-                    </StackPanel>-->
-                    <usercontrols:ProductTreeCtrl Product="{Binding .}" Width="300"/>
-                </HierarchicalDataTemplate>
-                <!--<DataTemplate DataType="{x:Type Entities:Move}">
-                    <StackPanel HorizontalAlignment="Left">
-                        <usercontrols:MoveButton Move="{Binding .}" 
-                                                 IsEnabled="True" 
-                                                 HorizontalAlignment="Left">
-                            <usercontrols:MoveButton.ToolTip>
-                                <TextBlock Text="{Binding .}"/>
-                            </usercontrols:MoveButton.ToolTip>
-                        </usercontrols:MoveButton>
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="Delete Server"
+                            Command="{Binding DeleteServerCmd}"/>
+                    <Button Content="Delete Material"
+                            Command="{Binding DeleteMaterialCmd}"/>
+                    <Button Content="Delete Product"
+                            Command="{Binding DeleteProductCmd}"/>
+                </StackPanel>
+            
+                <StackPanel Orientation="Horizontal"
+                            Visibility="{Binding SaveButtonVisibility}">
+                    <Button Content="Add Server"
+                            Command="{Binding AddServerCmd}"/>
+                    <Button Content="Add Material"
+                            Command="{Binding AddMaterialCmd}"/>
+                    <Button Content="Add Product"
+                            Command="{Binding AddProductCmd}"/>
+                </StackPanel>
+
+                <StackPanel Visibility="{Binding SaveButtonVisibility}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Server" Style="{StaticResource popupLabel}"/>
+                        <TextBox Text="{Binding NewServerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
-                </DataTemplate>-->
-            </TreeView.Resources>
-        </TreeView>
-    </Grid>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Material" Style="{StaticResource popupLabel}"/>
+                        <TextBox Text="{Binding NewMaterialName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Product" Style="{StaticResource popupLabel}"/>
+                        <TextBox Text="{Binding NewProductName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
+                </StackPanel>
+            
+            </StackPanel>
+        
+            <TreeView ItemsSource="{Binding Servers}" 
+                      Background="Transparent"
+                      x:Name="treeView"
+                      Grid.Row="1">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectedItemChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectedItemCommand}"
+                                           CommandParameter="{Binding SelectedItem, ElementName=treeView}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <TreeView.Resources>
+                    <HierarchicalDataTemplate DataType="{x:Type StoredData:Server}" ItemsSource="{Binding Materials}">
+                        <!--<StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+                        </StackPanel>-->
+                        <usercontrols:ServerTreeCtrl Server="{Binding .}"/>
+                    </HierarchicalDataTemplate>
+                    <HierarchicalDataTemplate DataType="{x:Type StoredData:Material}" ItemsSource="{Binding Products}">
+                        <!--<StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}"/>
+                        </StackPanel>-->
+                        <usercontrols:MaterialTreeCtrl Material="{Binding .}"/>
+                    </HierarchicalDataTemplate>
+                    <HierarchicalDataTemplate DataType="{x:Type StoredData:Product}" >
+                        <!--<StackPanel Orientation="Horizontal">
+                            <TextBlock>
+                                <Run Text="{Binding Name}"/>
+                                <Run Text="  -  Target: "/>
+                                <Run Text="{Binding Target}"/>
+                            </TextBlock>
+                        </StackPanel>-->
+                        <usercontrols:ProductTreeCtrl Product="{Binding .}"/>
+                    </HierarchicalDataTemplate>
+                    <!--<DataTemplate DataType="{x:Type Entities:Move}">
+                        <StackPanel HorizontalAlignment="Left">
+                            <usercontrols:MoveButton Move="{Binding .}" 
+                                                     IsEnabled="True" 
+                                                     HorizontalAlignment="Left">
+                                <usercontrols:MoveButton.ToolTip>
+                                    <TextBlock Text="{Binding .}"/>
+                                </usercontrols:MoveButton.ToolTip>
+                            </usercontrols:MoveButton>
+                        </StackPanel>
+                    </DataTemplate>-->
+                </TreeView.Resources>
+            </TreeView>
+        </Grid>
+    </Border>
 </Window>
