--- a/LIB_Library/ResourceDictionary/CommonColors.xaml
+++ b/LIB_Library/ResourceDictionary/CommonColors.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="bgColor">#f5f5f5</Color>
+    <!--<Color x:Key="bgColor">#f5f5f5</Color>
     <Color x:Key="bgColorLight">#fafafa</Color>
     <Color x:Key="accentColor">#f70d68</Color>
     <Color x:Key="accentColorDark">#5e3b49</Color>
@@ -12,5 +12,17 @@
     <SolidColorBrush x:Key="AccentColor" Color="{StaticResource accentColor}"/>
     <SolidColorBrush x:Key="AccentColorDark" Color="{StaticResource accentColorDark}"/>
     <SolidColorBrush x:Key="TextColor" Color="{StaticResource textColor}"/>
-    <SolidColorBrush x:Key="BorderColor" Color="{StaticResource borderColor}"/>
+    <SolidColorBrush x:Key="BorderColor" Color="{StaticResource borderColor}"/>-->
+
+    <Color x:Key="bgColor">White</Color>
+    <Color x:Key="textColor">Black</Color>
+    <Color x:Key="sliderRed">Red</Color>
+    <Color x:Key="sliderGreen">Green</Color>
+    <Color x:Key="sliderBack">DarkGray</Color>
+
+    <SolidColorBrush x:Key="BgColorBrush" Color="{StaticResource bgColor}"/>
+    <SolidColorBrush x:Key="TextColorBrush" Color="{StaticResource textColor}"/>
+    <SolidColorBrush x:Key="SliderRedBrush" Color="{StaticResource sliderRed}"/>
+    <SolidColorBrush x:Key="SliderGreenBrush" Color="{StaticResource sliderGreen}"/>
+    <SolidColorBrush x:Key="SliderBackBrush" Color="{StaticResource sliderBack}"/>
 </ResourceDictionary>
