--- a/LIB_Library/ResourceDictionary/CommonStyles.xaml
+++ b/LIB_Library/ResourceDictionary/CommonStyles.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:MarkupExtensions="clr-namespace:WPF_Core.MarkupExtensions;assembly=WPF_Core"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:valueConverters="clr-namespace:LIB.ValueConverters"
                     xmlns:UserControls="clr-namespace:LIB.UserControls"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
@@ -7,6 +9,34 @@
         <ResourceDictionary Source="/LIB_Library;component/ResourceDictionary/CommonColors.xaml"/>
         <ResourceDictionary Source="/LIB_Library;component/ResourceDictionary/Geometries.xaml"/>
     </ResourceDictionary.MergedDictionaries>
+
+    <!--#region Converters -->
+    <valueConverters:BitmapToBitmapImageConverter x:Key="ImageConverter"/>
+    <!--#endregion-->
+    <FontFamily x:Key="MainFontStyle">/pack://application:,,,/AnvilTool;component/Fonts/#Minecraft</FontFamily>
+
+
+    <!--#region Values Definitions -->
+    <sys:Double x:Key="btnDim">50</sys:Double>
+    <sys:Double x:Key="stepDim">30</sys:Double>
+    <sys:Double x:Key="barHeight">20</sys:Double>
+    <sys:Double x:Key="barWidth">400</sys:Double>
+    <sys:Double x:Key="sliderHeight">16</sys:Double>
+    <sys:Double x:Key="treeIconDim">20</sys:Double>
+    <sys:Double x:Key="treeLblFontSize">16</sys:Double>
+    <!--#endregion-->
+
+    <Style TargetType="{x:Type Window}">
+        <!--<Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>-->
+        <Setter Property="Background" Value="{StaticResource BgColorBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource TextColorBrush}"/>
+    </Style>
+
+    <Style TargetType="ToolTip">
+        <!--<Setter Property="FontFamily" Value="{StaticResource MainFontStyle}"/>-->
+    </Style>
+
+
     <!--<FontFamily x:Key="PressStartP2P">/pack://application:,,,/LIB_Library;component/Fonts/#Press Start 2P Regular</FontFamily>
     
     <Style TargetType="{x:Type Window}">
