--- a/LIB_Library/UserControls/MoveBar.xaml
+++ b/LIB_Library/UserControls/MoveBar.xaml
@@ -7,7 +7,7 @@
              xmlns:properties="clr-namespace:LIB.Properties"
              mc:Ignorable="d" >
     <UserControl.Resources>
-        <ResourceDictionary Source="pack://application:,,,/LIB;component/ResourceDictionary/CommonStyles.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/LIB_Library;component/ResourceDictionary/CommonStyles.xaml"/>
     </UserControl.Resources>
     <Canvas Height="{StaticResource barHeight}" Width="{StaticResource barWidth}">
         <Canvas.Resources>
