--- a/ApplicationProject/Views/HomeView.xaml
+++ b/ApplicationProject/Views/HomeView.xaml
@@ -3,6 +3,140 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AnvilTool.Views">
-    
+             xmlns:local="clr-namespace:AnvilTool" 
+             xmlns:Const="clr-namespace:LIB.Constants;assembly=LIB_Library"
+             xmlns:properties="clr-namespace:AnvilTool.Properties" 
+             xmlns:usercontrols="clr-namespace:LIB.UserControls;assembly=LIB_Library"
+             mc:Ignorable="d"
+             Height="520" Width="720">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!--<ResourceDictionary Source="/LIB_Library;component/ResourceDictionary/CommonStyles.xaml"/>-->
+                <ResourceDictionary Source="/ResourceDictionary/CommonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
+    <Border Padding="0" Margin="0">
+        <Border.Background>
+            <ImageBrush ImageSource="{StaticResource inventoryDrawingImage}" Stretch="Fill"/>
+        </Border.Background>
+        <Grid Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <usercontrols:FinalSequence FinalSeq="{Binding FinalSequence, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 8"
+                                    Grid.Row="0"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Center"/>
+
+
+            <!--AVAILABLE MOVES-->
+            <ItemsControl ItemsSource="{x:Static Const:Cnst.Moves}"
+                      Grid.Row="1"
+                      Grid.Column="1"
+                      ToolTip="Available Moves">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel FlowDirection="LeftToRight"
+                       MaxWidth="250"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <usercontrols:MoveButtonNew Move="{Binding .}"
+                                     MoveClickCommand="{Binding DataContext.PressMoveCmd, RelativeSource={RelativeSource AncestorType=Window}}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <!--Status Bar-->
+            <usercontrols:MoveBar Grid.Row="2"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="3"
+                              Margin="0, 4"
+                              Height="{StaticResource barHeight}"
+                              MinPossible="{Binding MinPossible}"
+                              MaxPossible="{Binding MaxPossible}"
+                              CurrentPos="{Binding CurrentPos}"/>
+
+            <!--Commands - Temporary-->
+            <StackPanel Grid.Row="0" 
+                    Grid.RowSpan="2"
+                    Grid.Column="0"
+                    Orientation="Vertical" 
+                    Margin="8">
+                <StackPanel.Resources>
+                    <Style TargetType="Button">
+                        <Setter Property="MinWidth" Value="150"/>
+                        <Setter Property="Margin" Value="0,4,0,0"/>
+                        <Setter Property="HorizontalAlignment" Value="Left"/>
+                    </Style>
+                </StackPanel.Resources>
+
+                <!--<Button Content="Record Final Sequence" Command="{Binding StartRecordFinalCmd}" Margin="0,0,6,0"/>-->
+                <Button Content="Start Exploration" Command="{Binding ToggleExploreCmd}"/>
+                <Button Content="Mark Direction Change" Command="{Binding MarkDirectionChangeCmd}"/>
+                <Button Content="Found Exact" Command="{Binding FoundExactCmd}"/>
+                <Button Content="Reset" Command="{Binding ResetCmd}"/>
+                <Button Content="Save Recipe" Command="{Binding SaveRecipeCmd}"/>
+                <Button Content="Load Recipe" Command="{Binding LoadRecipeCmd}"/>
+                <Button Content="Compute Shortest" Command="{Binding ComputeShortestCmd}"/>
+            </StackPanel>
+
+            <ItemsControl Grid.Row="4" 
+                      Grid.Column="0"
+                      Grid.ColumnSpan="3"
+                      ItemsSource="{Binding ComputedSequence}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel FlowDirection="LeftToRight"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <!--<usercontrols:MoveButtonNew Move="{Binding .}"/>-->
+                        <usercontrols:ActionMove Move="{Binding .}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <!--CURRENT - Temporary-->
+            <StackPanel Grid.Row="1"
+                    Grid.Column="2"
+                    Orientation="Horizontal">
+                <StackPanel Margin="2 2">
+                    <TextBlock Margin="0,6,0,0">
+            <Run Text="Pos: "/>
+            <Run Text="{Binding CurrentPos}" d:Text="60" />
+                    </TextBlock>
+                    <TextBlock Text="Intervallo possibile:" FontWeight="Bold"/>
+                    <TextBlock >
+            <Run Text="["/>
+            <Run Text="{Binding MinPossible}" d:Text="20"/>
+            <Run Text=", "/>
+            <Run Text="{Binding MaxPossible}" d:Text="110"/>
+            <Run Text="]"/>
+                    </TextBlock>
+                </StackPanel>
+                <StackPanel Margin="10 2">
+                    <TextBlock Text="Target Attuale"/>
+                    <TextBox   Text="{Binding ActualTarget, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+    </Border>
+
 </UserControl>
