--- a/ApplicationProject/Views/MainWindow.xaml
+++ b/ApplicationProject/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/LIB_Library;component/ResourceDictionary/CommonStyles.xaml"/>
+                <ResourceDictionary Source="/AnvilTool;component/ResourceDictionary/CommonStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
